// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`work location all 宮町 navi 1`] = `
Object {
  "navi": Object {
    "三重県": Object {
      "三重県-伊勢市-宮町": 0,
      "三重県-松阪市-宮町": 0,
      "三重県-桑名市-宮町": 0,
    },
    "京都府": Object {
      "京都府-京都市": Object {
        "京都府-京都市-伏見区-竹田-田中-宮町": 0,
        "京都府-京都市-右京区-京北-宮町": 0,
        "京都府-京都市-西京区-嵐山-宮町": 0,
      },
      "京都府-南丹市-園部町-宮町": 0,
      "京都府-宮津市-宮町": 0,
    },
    "兵庫県": Object {
      "兵庫県-姫路市-飾磨区-英賀-宮町": 0,
      "兵庫県-神戸市": Object {
        "兵庫県-神戸市-東灘区-住吉-宮町": 0,
        "兵庫県-神戸市-長田区-池田-宮町": 0,
      },
    },
    "北海道": Object {
      "北海道-江別市-大麻-宮町": 0,
      "北海道-空知郡": Object {
        "北海道-空知郡-上富良野町-宮町": 0,
        "北海道-空知郡-中富良野町-宮町": 0,
      },
    },
    "埼玉県": Object {
      "埼玉県-さいたま市": Object {
        "埼玉県-さいたま市-大宮区-宮町": 0,
        "埼玉県-さいたま市-岩槻区-宮町": 0,
      },
      "埼玉県-川口市-宮町": 0,
      "埼玉県-熊谷市-宮町": 0,
    },
    "大阪府": Object {
      "大阪府-八尾市-宮町": 0,
      "大阪府-大阪市-平野区-平野-宮町": 0,
      "大阪府-富田林市-宮町": 0,
      "大阪府-泉大津市-宮町": 0,
    },
    "宮城県": Object {
      "宮城県-仙台市-青葉区-宮町": 0,
      "宮城県-塩竈市-宮町": 0,
    },
    "富山県-富山市-宮町": 0,
    "山形県-山形市-宮町": 0,
    "岐阜県": Object {
      "岐阜県-大垣市-宮町": 0,
      "岐阜県-岐阜市-旦島-宮町": 0,
    },
    "岩手県-宮古市-宮町": 0,
    "愛知県": Object {
      "愛知県-春日井市-宮町": 0,
      "愛知県-江南市-飛高町-宮町": 0,
      "愛知県-碧南市-宮町": 0,
      "愛知県-稲沢市-中野-宮町": 0,
      "愛知県-西尾市-宮町": 0,
      "愛知県-豊田市-宮町": 0,
    },
    "新潟県": Object {
      "新潟県-五泉市-宮町": 0,
      "新潟県-燕市-宮町": 0,
    },
    "東京都-府中市-宮町": 0,
    "栃木県": Object {
      "栃木県-宇都宮市-宮町": 0,
      "栃木県-栃木市-宮町": 0,
      "栃木県-那須塩原市-宮町": 0,
    },
    "滋賀県-甲賀市-信楽町-宮町": 0,
    "石川県-加賀市-宮町": 0,
    "福岡県-飯塚市-宮町": 0,
    "福島県": Object {
      "福島県-伊達郡-川俣町-宮町": 0,
      "福島県-会津若松市-宮町": 0,
      "福島県-福島市-宮町": 0,
    },
    "茨城県-水戸市-宮町": 0,
    "静岡県": Object {
      "静岡県-富士宮市-宮町": 0,
      "静岡県-沼津市-宮町": 0,
    },
  },
}
`;

exports[`work location drill-down UI query 1`] = `
list [
  "北海道",
  "富山",
  "新潟",
  "神奈川",
  "東京",
  "千葉",
  "埼玉",
  "愛知",
  "石川",
  "福井",
  "静岡",
  "岐阜",
  "山梨",
  "群馬",
  "栃木",
  "茨城",
  "長野",
  "三重",
  "滋賀",
  "京都",
  "青森",
  "大阪",
  "兵庫",
  "福島",
  "奈良",
  "和歌山",
  "岩手",
  "鳥取",
  "島根",
  "岡山",
  "広島",
  "山口",
  "徳島",
  "山形",
  "宮城",
  "沖縄",
  "鹿児島",
  "宮崎",
  "大分",
  "熊本",
  "長崎",
  "佐賀",
  "福岡",
  "高知",
  "愛媛",
  "香川",
  "秋田",
]
`;

exports[`work location drill-down UI query 2`] = `
WorkLocation {
  "_id": "埼玉県",
  "idx": "埼玉県",
  "label": "埼玉",
  "name": "埼玉県",
  "unit": "県",
}
`;

exports[`work location drill-down UI query 3`] = `
list [
  "さいたま",
  "ふじみ野",
  "北葛飾",
  "北足立",
  "南埼玉",
  "富士見",
  "春日部",
  "東松山",
  "鶴ヶ島",
  "三郷",
  "上尾",
  "久喜",
  "児玉",
  "入間",
  "入間",
  "八潮",
  "加須",
  "北本",
  "吉川",
  "和光",
  "坂戸",
  "大里",
  "川口",
  "川越",
  "幸手",
  "志木",
  "戸田",
  "所沢",
  "新座",
  "日高",
  "朝霞",
  "本庄",
  "桶川",
  "比企",
  "深谷",
  "熊谷",
  "狭山",
  "白岡",
  "秩父",
  "秩父",
  "羽生",
  "草加",
  "蓮田",
  "行田",
  "越谷",
  "飯能",
  "鴻巣",
  "蕨",
  "県庁",
]
`;

exports[`work location drill-down UI query 4`] = `
WorkLocation {
  "_id": "埼玉県-さいたま市",
  "idx": "さいたま市",
  "label": "さいたま",
  "name": "埼玉県さいたま市",
  "unit": "市",
  "work_location_id": "埼玉県",
}
`;

exports[`work location drill-down UI query 5`] = `
list [
  "中央",
  "大宮",
  "岩槻",
  "浦和",
  "見沼",
  "北",
  "南",
  "市役所",
  "桜",
  "緑",
  "西",
]
`;

exports[`work location drill-down UI query 6`] = `
WorkLocation {
  "_id": "埼玉県-さいたま市-北区",
  "idx": "北区",
  "label": "北",
  "name": "埼玉県さいたま市北区",
  "unit": "区",
  "work_location_id": "埼玉県-さいたま市",
}
`;

exports[`work location drill-down UI query 7`] = `
list [
  "東大成",
  "今羽",
  "別所",
  "吉野",
  "土呂",
  "大成",
  "奈良",
  "宮原",
  "日進",
  "本郷",
  "植竹",
  "櫛引",
  "盆栽",
  "上加",
  "見沼",
]
`;

exports[`work location drill-down UI query 8`] = `
WorkLocation {
  "_id": "埼玉県-さいたま市-北区-宮原町",
  "idx": "宮原町",
  "jiscode": "11102",
  "label": "宮原",
  "name": "埼玉県さいたま市北区宮原町",
  "ruby": "さいたまけんさいたましきたくみやはらちよう",
  "unit": "町",
  "work_location_id": "埼玉県-さいたま市-北区",
  "zipcode": "3310812",
}
`;

exports[`work location drill-down UI query 9`] = `list []`;

exports[`work location id longest no zip 1`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー-イースト",
  "idx": "イースト",
  "label": "イースト",
  "name": "大阪府大阪市北区大淀中梅田スカイビルタワーイースト",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー",
}
`;

exports[`work location id longest no zip 2`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー",
  "idx": "スカイビルタワー",
  "label": "スカイビルタワー",
  "name": "大阪府大阪市北区大淀中梅田スカイビルタワー",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区-大淀中-梅田",
}
`;

exports[`work location id longest no zip 3`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中-梅田",
  "idx": "梅田",
  "label": "梅田",
  "name": "大阪府大阪市北区大淀中梅田",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区-大淀中",
}
`;

exports[`work location id longest no zip 4`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中",
  "idx": "大淀中",
  "label": "大淀中",
  "name": "大阪府大阪市北区大淀中",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区",
}
`;

exports[`work location id longest no zip 5`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区",
  "idx": "北区",
  "label": "北",
  "name": "大阪府大阪市北区",
  "unit": "区",
  "work_location_id": "大阪府-大阪市",
}
`;

exports[`work location id longest no zip 6`] = `
WorkLocation {
  "_id": "大阪府-大阪市",
  "idx": "大阪市",
  "label": "大阪",
  "name": "大阪府大阪市",
  "unit": "市",
  "work_location_id": "大阪府",
}
`;

exports[`work location id longest no zip 7`] = `
WorkLocation {
  "_id": "大阪府",
  "idx": "大阪府",
  "label": "大阪",
  "name": "大阪府",
  "unit": "府",
}
`;

exports[`work location id longest with zip 1`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー-イースト-（１階）",
  "idx": "（１階）",
  "jiscode": "27127",
  "label": "（１階）",
  "name": "大阪府大阪市北区大淀中梅田スカイビルタワーイースト（１階）",
  "ruby": "おおさかふおおさかしきたくおおよどなかうめだすかいびるたわーいーすと1かい",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー-イースト",
  "zipcode": "5316001",
}
`;

exports[`work location id longest with zip 2`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー-イースト",
  "idx": "イースト",
  "label": "イースト",
  "name": "大阪府大阪市北区大淀中梅田スカイビルタワーイースト",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー",
}
`;

exports[`work location id longest with zip 3`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中-梅田-スカイビルタワー",
  "idx": "スカイビルタワー",
  "label": "スカイビルタワー",
  "name": "大阪府大阪市北区大淀中梅田スカイビルタワー",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区-大淀中-梅田",
}
`;

exports[`work location id longest with zip 4`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中-梅田",
  "idx": "梅田",
  "label": "梅田",
  "name": "大阪府大阪市北区大淀中梅田",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区-大淀中",
}
`;

exports[`work location id longest with zip 5`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区-大淀中",
  "idx": "大淀中",
  "label": "大淀中",
  "name": "大阪府大阪市北区大淀中",
  "unit": null,
  "work_location_id": "大阪府-大阪市-北区",
}
`;

exports[`work location id longest with zip 6`] = `
WorkLocation {
  "_id": "大阪府-大阪市-北区",
  "idx": "北区",
  "label": "北",
  "name": "大阪府大阪市北区",
  "unit": "区",
  "work_location_id": "大阪府-大阪市",
}
`;

exports[`work location id longest with zip 7`] = `
WorkLocation {
  "_id": "大阪府-大阪市",
  "idx": "大阪市",
  "label": "大阪",
  "name": "大阪府大阪市",
  "unit": "市",
  "work_location_id": "大阪府",
}
`;

exports[`work location id longest with zip 8`] = `
WorkLocation {
  "_id": "大阪府",
  "idx": "大阪府",
  "label": "大阪",
  "name": "大阪府",
  "unit": "府",
}
`;

exports[`work location query size 1`] = `131732`;

exports[`work location 埼玉県-さいたま市 navi 1`] = `
Object {
  "navi": Object {
    "埼玉県-さいたま市": Object {
      "埼玉県-さいたま市-中央区": Object {
        "埼玉県-さいたま市-中央区-上峰": 0,
        "埼玉県-さいたま市-中央区-上落合": 0,
        "埼玉県-さいたま市-中央区-下落合": 0,
        "埼玉県-さいたま市-中央区-八王子": 0,
        "埼玉県-さいたま市-中央区-円阿弥": 0,
        "埼玉県-さいたま市-中央区-大戸": 0,
        "埼玉県-さいたま市-中央区-新中里": 0,
        "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル": Object {
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（地階・階層不明）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１０階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１１階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１２階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１３階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１４階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１５階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１６階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１７階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１８階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（１９階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２０階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２１階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２２階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２３階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２４階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２５階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２６階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２７階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２８階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（２９階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（３階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（３０階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（３１階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（３２階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（３３階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（３４階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（３５階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（４階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（５階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（６階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（７階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（８階）": 0,
          "埼玉県-さいたま市-中央区-新都心-明治安田生命さいたま新都心ビル-（９階）": 0,
        },
        "埼玉県-さいたま市-中央区-本町": Object {
          "埼玉県-さいたま市-中央区-本町-東": 0,
          "埼玉県-さいたま市-中央区-本町-西": 0,
        },
        "埼玉県-さいたま市-中央区-桜丘": 0,
        "埼玉県-さいたま市-中央区-鈴谷": 0,
      },
      "埼玉県-さいたま市-北区": Object {
        "埼玉県-さいたま市-北区-上加": 0,
        "埼玉県-さいたま市-北区-今羽町": 0,
        "埼玉県-さいたま市-北区-別所町": 0,
        "埼玉県-さいたま市-北区-吉野町": 0,
        "埼玉県-さいたま市-北区-土呂町": 0,
        "埼玉県-さいたま市-北区-大成町": 0,
        "埼玉県-さいたま市-北区-奈良町": 0,
        "埼玉県-さいたま市-北区-宮原町": 0,
        "埼玉県-さいたま市-北区-日進町": 0,
        "埼玉県-さいたま市-北区-本郷町": 0,
        "埼玉県-さいたま市-北区-東大成町": 0,
        "埼玉県-さいたま市-北区-植竹町": 0,
        "埼玉県-さいたま市-北区-櫛引町": 0,
        "埼玉県-さいたま市-北区-盆栽町": 0,
        "埼玉県-さいたま市-北区-見沼": 0,
      },
      "埼玉県-さいたま市-南区": Object {
        "埼玉県-さいたま市-南区-内谷": 0,
        "埼玉県-さいたま市-南区-円正寺": 0,
        "埼玉県-さいたま市-南区-別所": 0,
        "埼玉県-さいたま市-南区-南本町": 0,
        "埼玉県-さいたま市-南区-南浦和": 0,
        "埼玉県-さいたま市-南区-四谷": 0,
        "埼玉県-さいたま市-南区-堤外": 0,
        "埼玉県-さいたま市-南区-大谷口": 0,
        "埼玉県-さいたま市-南区-大谷場": 0,
        "埼玉県-さいたま市-南区-太田窪": 0,
        "埼玉県-さいたま市-南区-広ケ谷戸": 0,
        "埼玉県-さいたま市-南区-文蔵": 0,
        "埼玉県-さいたま市-南区-曲本": 0,
        "埼玉県-さいたま市-南区-松本": 0,
        "埼玉県-さいたま市-南区-根岸": 0,
        "埼玉県-さいたま市-南区-沼影": 0,
        "埼玉県-さいたま市-南区-白幡": 0,
        "埼玉県-さいたま市-南区-神明": 0,
        "埼玉県-さいたま市-南区-辻": 0,
        "埼玉県-さいたま市-南区-関": 0,
        "埼玉県-さいたま市-南区-鹿手袋": 0,
      },
      "埼玉県-さいたま市-大宮区": Object {
        "埼玉県-さいたま市-大宮区-三橋": 0,
        "埼玉県-さいたま市-大宮区-上小町": 0,
        "埼玉県-さいたま市-大宮区-下町": 0,
        "埼玉県-さいたま市-大宮区-仲町": 0,
        "埼玉県-さいたま市-大宮区-北袋町": 0,
        "埼玉県-さいたま市-大宮区-吉敷町": 0,
        "埼玉県-さいたま市-大宮区-土手町": 0,
        "埼玉県-さいたま市-大宮区-堀の内町": 0,
        "埼玉県-さいたま市-大宮区-大原": 0,
        "埼玉県-さいたま市-大宮区-大成町": 0,
        "埼玉県-さいたま市-大宮区-大門町": 0,
        "埼玉県-さいたま市-大宮区-天沼町": 0,
        "埼玉県-さいたま市-大宮区-宮町": 0,
        "埼玉県-さいたま市-大宮区-寿能町": 0,
        "埼玉県-さいたま市-大宮区-東町": 0,
        "埼玉県-さいたま市-大宮区-桜木町": 0,
        "埼玉県-さいたま市-大宮区-櫛引町": 0,
        "埼玉県-さいたま市-大宮区-浅間町": 0,
        "埼玉県-さいたま市-大宮区-錦町": 0,
        "埼玉県-さいたま市-大宮区-高鼻町": 0,
      },
      "埼玉県-さいたま市-岩槻区": Object {
        "埼玉県-さいたま市-岩槻区-上里": 0,
        "埼玉県-さいたま市-岩槻区-上野": 0,
        "埼玉県-さいたま市-岩槻区-並木": 0,
        "埼玉県-さいたま市-岩槻区-仲町": 0,
        "埼玉県-さいたま市-岩槻区-加倉": 0,
        "埼玉県-さいたま市-岩槻区-南下新井": 0,
        "埼玉県-さいたま市-岩槻区-南平野": 0,
        "埼玉県-さいたま市-岩槻区-南辻": 0,
        "埼玉県-さいたま市-岩槻区-原町": 0,
        "埼玉県-さいたま市-岩槻区-古ケ場": 0,
        "埼玉県-さいたま市-岩槻区-城-南": 0,
        "埼玉県-さいたま市-岩槻区-城町": 0,
        "埼玉県-さいたま市-岩槻区-増長": 0,
        "埼玉県-さいたま市-岩槻区-大口": 0,
        "埼玉県-さいたま市-岩槻区-大戸": 0,
        "埼玉県-さいたま市-岩槻区-大森": 0,
        "埼玉県-さいたま市-岩槻区-大谷": 0,
        "埼玉県-さいたま市-岩槻区-大野島": 0,
        "埼玉県-さいたま市-岩槻区-太田": 0,
        "埼玉県-さいたま市-岩槻区-宮町": 0,
        "埼玉県-さいたま市-岩槻区-小溝": 0,
        "埼玉県-さいたま市-岩槻区-尾ケ崎": 0,
        "埼玉県-さいたま市-岩槻区-尾ケ崎新田": 0,
        "埼玉県-さいたま市-岩槻区-岩槻": 0,
        "埼玉県-さいたま市-岩槻区-平林寺": 0,
        "埼玉県-さいたま市-岩槻区-府内": 0,
        "埼玉県-さいたま市-岩槻区-徳力": 0,
        "埼玉県-さいたま市-岩槻区-愛宕町": 0,
        "埼玉県-さいたま市-岩槻区-慈恩寺": 0,
        "埼玉県-さいたま市-岩槻区-掛": 0,
        "埼玉県-さいたま市-岩槻区-新方須賀": 0,
        "埼玉県-さいたま市-岩槻区-日の出町": 0,
        "埼玉県-さいたま市-岩槻区-末田": 0,
        "埼玉県-さいたま市-岩槻区-本丸": 0,
        "埼玉県-さいたま市-岩槻区-本宿": 0,
        "埼玉県-さいたま市-岩槻区-本町": 0,
        "埼玉県-さいたま市-岩槻区-村国": 0,
        "埼玉県-さいたま市-岩槻区-東岩槻": 0,
        "埼玉県-さいたま市-岩槻区-東町": 0,
        "埼玉県-さいたま市-岩槻区-柏崎": 0,
        "埼玉県-さいたま市-岩槻区-横根": 0,
        "埼玉県-さいたま市-岩槻区-浮谷": 0,
        "埼玉県-さいたま市-岩槻区-相野原": 0,
        "埼玉県-さいたま市-岩槻区-真福寺": 0,
        "埼玉県-さいたま市-岩槻区-笹久保": 0,
        "埼玉県-さいたま市-岩槻区-笹久保新田": 0,
        "埼玉県-さいたま市-岩槻区-箕輪": 0,
        "埼玉県-さいたま市-岩槻区-美園-東": 0,
        "埼玉県-さいたま市-岩槻区-美幸町": 0,
        "埼玉県-さいたま市-岩槻区-表慈恩寺": 0,
        "埼玉県-さいたま市-岩槻区-裏慈恩寺": 0,
        "埼玉県-さいたま市-岩槻区-西原": 0,
        "埼玉県-さいたま市-岩槻区-西原台": 0,
        "埼玉県-さいたま市-岩槻区-西町": 0,
        "埼玉県-さいたま市-岩槻区-諏訪": 0,
        "埼玉県-さいたま市-岩槻区-谷下": 0,
        "埼玉県-さいたま市-岩槻区-野孫": 0,
        "埼玉県-さいたま市-岩槻区-金重": 0,
        "埼玉県-さいたま市-岩槻区-釣上": 0,
        "埼玉県-さいたま市-岩槻区-釣上新田": 0,
        "埼玉県-さいたま市-岩槻区-長宮": 0,
        "埼玉県-さいたま市-岩槻区-飯塚": 0,
        "埼玉県-さいたま市-岩槻区-馬込": 0,
        "埼玉県-さいたま市-岩槻区-高曽根": 0,
        "埼玉県-さいたま市-岩槻区-鹿室": 0,
        "埼玉県-さいたま市-岩槻区-黒谷": 0,
      },
      "埼玉県-さいたま市-市役所": 0,
      "埼玉県-さいたま市-桜区": Object {
        "埼玉県-さいたま市-桜区-上大久保": 0,
        "埼玉県-さいたま市-桜区-下大久保": 0,
        "埼玉県-さいたま市-桜区-中島": 0,
        "埼玉県-さいたま市-桜区-五関": 0,
        "埼玉県-さいたま市-桜区-南元宿": 0,
        "埼玉県-さいたま市-桜区-在家": 0,
        "埼玉県-さいたま市-桜区-塚本": 0,
        "埼玉県-さいたま市-桜区-大久保領家": 0,
        "埼玉県-さいたま市-桜区-宿": 0,
        "埼玉県-さいたま市-桜区-山久保": 0,
        "埼玉県-さいたま市-桜区-新開": 0,
        "埼玉県-さいたま市-桜区-昭和": 0,
        "埼玉県-さいたま市-桜区-栄和": 0,
        "埼玉県-さいたま市-桜区-桜田": 0,
        "埼玉県-さいたま市-桜区-田島": 0,
        "埼玉県-さいたま市-桜区-町谷": 0,
        "埼玉県-さいたま市-桜区-白鍬": 0,
        "埼玉県-さいたま市-桜区-神田": 0,
        "埼玉県-さいたま市-桜区-西堀": 0,
        "埼玉県-さいたま市-桜区-道場": 0,
      },
      "埼玉県-さいたま市-浦和区": Object {
        "埼玉県-さいたま市-浦和区-三崎": 0,
        "埼玉県-さいたま市-浦和区-上木崎": 0,
        "埼玉県-さいたま市-浦和区-仲町": 0,
        "埼玉県-さいたま市-浦和区-元町": 0,
        "埼玉県-さいたま市-浦和区-前地": 0,
        "埼玉県-さいたま市-浦和区-北浦和": 0,
        "埼玉県-さいたま市-浦和区-大-東": 0,
        "埼玉県-さいたま市-浦和区-大原": 0,
        "埼玉県-さいたま市-浦和区-岸町": 0,
        "埼玉県-さいたま市-浦和区-常盤": 0,
        "埼玉県-さいたま市-浦和区-木崎": 0,
        "埼玉県-さいたま市-浦和区-本太": 0,
        "埼玉県-さいたま市-浦和区-東仲町": 0,
        "埼玉県-さいたま市-浦和区-東岸町": 0,
        "埼玉県-さいたま市-浦和区-東高砂町": 0,
        "埼玉県-さいたま市-浦和区-瀬ケ崎": 0,
        "埼玉県-さいたま市-浦和区-皇山町": 0,
        "埼玉県-さいたま市-浦和区-神明": 0,
        "埼玉県-さいたま市-浦和区-針ヶ谷": 0,
        "埼玉県-さいたま市-浦和区-領家": 0,
        "埼玉県-さいたま市-浦和区-駒場": 0,
        "埼玉県-さいたま市-浦和区-高砂": 0,
      },
      "埼玉県-さいたま市-緑区": Object {
        "埼玉県-さいたま市-緑区-三室": 0,
        "埼玉県-さいたま市-緑区-三浦": 0,
        "埼玉県-さいたま市-緑区-上野田": 0,
        "埼玉県-さいたま市-緑区-下山口新田": 0,
        "埼玉県-さいたま市-緑区-下野田": 0,
        "埼玉県-さいたま市-緑区-中尾": 0,
        "埼玉県-さいたま市-緑区-中野田": 0,
        "埼玉県-さいたま市-緑区-井沼方": 0,
        "埼玉県-さいたま市-緑区-代山": 0,
        "埼玉県-さいたま市-緑区-北原": 0,
        "埼玉県-さいたま市-緑区-南部領辻": 0,
        "埼玉県-さいたま市-緑区-原山": 0,
        "埼玉県-さいたま市-緑区-大崎": 0,
        "埼玉県-さいたま市-緑区-大牧": 0,
        "埼玉県-さいたま市-緑区-大谷口": 0,
        "埼玉県-さいたま市-緑区-大道": 0,
        "埼玉県-さいたま市-緑区-大門": 0,
        "埼玉県-さいたま市-緑区-大間木": 0,
        "埼玉県-さいたま市-緑区-太田窪": 0,
        "埼玉県-さいたま市-緑区-宮後": 0,
        "埼玉県-さいたま市-緑区-宮本": 0,
        "埼玉県-さいたま市-緑区-寺山": 0,
        "埼玉県-さいたま市-緑区-山崎": 0,
        "埼玉県-さいたま市-緑区-新宿": 0,
        "埼玉県-さいたま市-緑区-東大門": 0,
        "埼玉県-さいたま市-緑区-東浦和": 0,
        "埼玉県-さいたま市-緑区-松木": 0,
        "埼玉県-さいたま市-緑区-玄蕃新田": 0,
        "埼玉県-さいたま市-緑区-美園": 0,
        "埼玉県-さいたま市-緑区-芝原": 0,
        "埼玉県-さいたま市-緑区-蓮見新田": 0,
        "埼玉県-さいたま市-緑区-見沼": 0,
        "埼玉県-さいたま市-緑区-道祖土": 0,
        "埼玉県-さいたま市-緑区-間宮": 0,
        "埼玉県-さいたま市-緑区-馬場": 0,
        "埼玉県-さいたま市-緑区-高畑": 0,
      },
      "埼玉県-さいたま市-西区": Object {
        "埼玉県-さいたま市-西区-プラザ": 0,
        "埼玉県-さいたま市-西区-三条町": 0,
        "埼玉県-さいたま市-西区-三橋": 0,
        "埼玉県-さいたま市-西区-中野林": 0,
        "埼玉県-さいたま市-西区-中釘": 0,
        "埼玉県-さいたま市-西区-二ツ宮": 0,
        "埼玉県-さいたま市-西区-佐知川": 0,
        "埼玉県-さいたま市-西区-内野本郷": 0,
        "埼玉県-さいたま市-西区-土屋": 0,
        "埼玉県-さいたま市-西区-塚本": 0,
        "埼玉県-さいたま市-西区-塚本町": 0,
        "埼玉県-さいたま市-西区-宝来": 0,
        "埼玉県-さいたま市-西区-宮前町": 0,
        "埼玉県-さいたま市-西区-峰岸": 0,
        "埼玉県-さいたま市-西区-島根": 0,
        "埼玉県-さいたま市-西区-平方領々家": 0,
        "埼玉県-さいたま市-西区-指扇": 0,
        "埼玉県-さいたま市-西区-指扇領別所": 0,
        "埼玉県-さいたま市-西区-指扇領辻": 0,
        "埼玉県-さいたま市-西区-昭和": 0,
        "埼玉県-さいたま市-西区-植田谷本": 0,
        "埼玉県-さいたま市-西区-植田谷本村-新田": 0,
        "埼玉県-さいたま市-西区-水判土": 0,
        "埼玉県-さいたま市-西区-清河寺": 0,
        "埼玉県-さいたま市-西区-湯木町": 0,
        "埼玉県-さいたま市-西区-西大宮": 0,
        "埼玉県-さいたま市-西区-西新井": 0,
        "埼玉県-さいたま市-西区-西遊馬": 0,
        "埼玉県-さいたま市-西区-飯田": 0,
        "埼玉県-さいたま市-西区-飯田新田": 0,
        "埼玉県-さいたま市-西区-高木": 0,
      },
      "埼玉県-さいたま市-見沼区": Object {
        "埼玉県-さいたま市-見沼区-上山口新田": 0,
        "埼玉県-さいたま市-見沼区-中川": 0,
        "埼玉県-さいたま市-見沼区-丸ケ崎": 0,
        "埼玉県-さいたま市-見沼区-丸ケ崎町": 0,
        "埼玉県-さいたま市-見沼区-加田屋": 0,
        "埼玉県-さいたま市-見沼区-加田屋新田": 0,
        "埼玉県-さいたま市-見沼区-南中丸": 0,
        "埼玉県-さいたま市-見沼区-南中野": 0,
        "埼玉県-さいたま市-見沼区-卸町": 0,
        "埼玉県-さいたま市-見沼区-堀崎町": 0,
        "埼玉県-さいたま市-見沼区-大和田町": 0,
        "埼玉県-さいたま市-見沼区-大谷": 0,
        "埼玉県-さいたま市-見沼区-宮ケ谷塔": 0,
        "埼玉県-さいたま市-見沼区-小深作": 0,
        "埼玉県-さいたま市-見沼区-山": 0,
        "埼玉県-さいたま市-見沼区-島町": 0,
        "埼玉県-さいたま市-見沼区-御蔵": 0,
        "埼玉県-さいたま市-見沼区-新右エ門新田": 0,
        "埼玉県-さいたま市-見沼区-新堤": 0,
        "埼玉県-さいたま市-見沼区-春岡": 0,
        "埼玉県-さいたま市-見沼区-春野": 0,
        "埼玉県-さいたま市-見沼区-東大宮": 0,
        "埼玉県-さいたま市-見沼区-東宮下": 0,
        "埼玉県-さいたま市-見沼区-東新井": 0,
        "埼玉県-さいたま市-見沼区-東門前": 0,
        "埼玉県-さいたま市-見沼区-染谷": 0,
        "埼玉県-さいたま市-見沼区-深作": 0,
        "埼玉県-さいたま市-見沼区-片柳-東": 0,
        "埼玉県-さいたま市-見沼区-砂町": 0,
        "埼玉県-さいたま市-見沼区-笹丸": 0,
        "埼玉県-さいたま市-見沼区-膝子": 0,
        "埼玉県-さいたま市-見沼区-蓮沼": 0,
        "埼玉県-さいたま市-見沼区-西山新田": 0,
        "埼玉県-さいたま市-見沼区-西山村-新田": 0,
        "埼玉県-さいたま市-見沼区-見山": 0,
        "埼玉県-さいたま市-見沼区-風渡野": 0,
      },
    },
  },
}
`;
